# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Automatically @generated Cargo.toml for the Rust crate cc_bindings_from_rs_cmdline.

[package]
name = "cc_bindings_from_rs_cmdline"
edition.workspace = true

license-file.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
path = "../../../cc_bindings_from_rs/cmdline.rs"

doctest = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
crubit_feature = { path = "../../../cargo/common/crubit_feature"}
dyn_format = { path = "../../../cargo/common/dyn_format"}
flagset.workspace = true
[dev-dependencies]
run_compiler_test_support = { path = "../../../cargo/cc_bindings_from_rs/run_compiler_test_support", package = "cc_bindings_from_rs_run_compiler_test_support"}
itertools.workspace = true
tempfile.workspace = true
