# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Automatically @generated Cargo.toml for the Rust crate cc_bindings_from_rs_crubit_attr.

[package]
name = "cc_bindings_from_rs_crubit_attr"
edition.workspace = true

license-file.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
path = "../../../cc_bindings_from_rs/crubit_attr.rs"

doctest = false

[dependencies]
anyhow.workspace = true
rustversion.workspace = true
[dev-dependencies]
crubit_attr = { path = "../../../cargo/cc_bindings_from_rs/crubit_attr", package = "cc_bindings_from_rs_crubit_attr"}
run_compiler_test_support = { path = "../../../cargo/cc_bindings_from_rs/run_compiler_test_support", package = "cc_bindings_from_rs_run_compiler_test_support"}
anyhow.workspace = true
