# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Automatically @generated Cargo.toml for the cc_libary cc_ffi_types_sys.

[package]
name = "cc_ffi_types_sys"
edition = "2021"

build = "build.rs"

[lib]
path = "lib.rs"

[dependencies]
ffi_types = { path = "../../../cargo/common/ffi_types" }


[build-dependencies]
crubit_build = { path =  "../../../cargo/build"}
