# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Automatically @generated Cargo.toml for the Rust crate errors.

[package]
name = "errors"
edition = "2021"

[lib]
path = "../../../common/errors.rs"

[dependencies]
arc_anyhow = { path = "../../../cargo/common/arc_anyhow"}
error_report = { path = "../../../cargo/common/error_report"}
anyhow.workspace = true
